crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__loop_visitor__test__symtab_fail_snapshot_tests@break_after_function_outside_loop_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/loop_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/loop_visitor/break_after_function_outside_loop_fail.tapir
---
Error: `break` or `continue` must be within a loop
   ╭─[break_after_function_outside_loop_fail.tapir:1:1]
   │
 1 │ break;
   │ ───┬──  
   │    ╰──── This statement
───╯
Error: `break` or `continue` must be within a loop
   ╭─[break_after_function_outside_loop_fail.tapir:1:1]
   │
 3 │ break;
   │ ───┬──  
   │    ╰──── This statement
───╯
Error: `break` or `continue` must be within a loop
   ╭─[break_after_function_outside_loop_fail.tapir:1:1]
   │
 4 │ continue;
   │ ────┬────  
   │     ╰────── This statement
───╯
Error: `break` or `continue` must be within a loop
   ╭─[break_after_function_outside_loop_fail.tapir:1:1]
   │
 5 │ break;
   │ ───┬──  
   │    ╰──── This statement
───╯
Error: `break` or `continue` must be within a loop
   ╭─[break_after_function_outside_loop_fail.tapir:1:1]
   │
 7 │     break;
   │     ───┬──  
   │        ╰──── This statement
───╯
Error: `break` or `continue` must be within a loop
   ╭─[break_after_function_outside_loop_fail.tapir:1:1]
   │
 9 │     continue;
   │     ────┬────  
   │         ╰────── This statement
───╯
